Adding built-in Client
