# pkg/api/v1/docs/api_swagger.yaml
@@ -242,6 +242,51 @@ info:
   title: EndKey API V1
   version: "1.0"
 paths:
+  /apikey:
+    post:
+      consumes:
+      - application/json
+      description: Create a new API Key for a given Authority
+      parameters:
+      - description: Create API Key Request
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/models.CreateAPIKeyRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.APIKeyResponse'
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+        "401":
+          description: Unauthorized
+          schema:
+            type: string
+        "404":
+          description: Not Found
+          schema:
+            type: string
+        "409":
+          description: Conflict
+          schema:
+            type: string
+        "412":
+          description: Precondition Failed
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      tags:
+      - apikey
   /authority:
     post:
       consumes:
